test/fail/import/repeat_import_as.lly
#[
SyntaxError: Package 'empty' has already been imported in this file.
    from repeat_import_as.lly:7
]#

import repeat_a as empty
import empty
